# DBoW2

./: .gitignore  CMakeLists.txt
include/DBoW2/: BowVector.h  DBoW2.h  FBRIEF.h  FClass.h  FORB.h  FeatureVector.h  QueryResults.h  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h
src/: BowVector.cpp  FBRIEF.cpp  FORB.cpp  FeatureVector.cpp  QueryResults.cpp  ScoringObject.cpp
tests/: CMakeLists.txt  DbQuery.cpp  LoadVocabulary.cpp  OriginCompare.cpp
tests/DBoW2_Origin/: CMakeLists.txt
tests/DBoW2_Origin/include/origin/: BowVector.h  DBoW2.h  FBrief.h  FClass.h  FORB.h  FSurf64.h  FeatureVector.h  QueryResults.h  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h
tests/DBoW2_Origin/src/: BowVector.cpp  FBrief.cpp  FORB.cpp  FSurf64.cpp  FeatureVector.cpp  QueryResults.cpp  ScoringObject.cpp
util/: CMakeLists.txt  ConvertORBVocabrary.cpp
